--- a/PY/DOC/.EXAMPLES.MD
+++ b/PY/DOC/.EXAMPLES.MD
@@ -1,5 +1,6 @@
 
-------------------------------------------------------------------------------------------------------------------------
+
+Welcome to Python
 
 ```python
 print ("Welcome to Python!")
@@ -9,4 +10,4 @@ Welcome to Python!
 >>>
 ```
 
-------------------------------------------------------------------------------------------------------------------------
+
