--- a/PY/DOC/.EXAMPLES.MD
+++ b/PY/DOC/.EXAMPLES.MD
@@ -3,10 +3,185 @@
 Welcome to Python
 
 ```python
-print ("Welcome to Python!")
+print("Welcome to Python!")
 
 >>>
 Welcome to Python!
+>>>
+```
+
+This line will be printed.
+
+```python
+print("This line will be printed.")
+
+>>>
+This line will be printed.
+>>>
+```
+
+x is 1
+
+```python
+x = 1
+if x == 1:
+    # indented four spaces
+    print("x is 1.")
+    
+>>>
+x is 1.
+>>>
+```
+
+```python
+"""
+Use the "print" command to print the line "Hello, World!".
+"""
+
+print("Goodbye, World!")
+print("Hello, World!")
+
+>>>
+Goodbye, World!
+Hello, World!
+>>>
+```
+
+Integer
+
+```python
+"""
+To define an integer, use the following syntax
+"""
+
+myint = 7
+print(myint)
+
+>>>
+7
+>>>
+```
+
+Float
+
+```python
+"""
+To define a floating point number, you may use one of the following notations
+"""
+
+myfloat = 7.0
+print(myfloat)
+myfloat = float(7)
+print(myfloat)
+
+>>>
+7.0
+7.0
+>>>
+```
+
+Strings
+
+```python
+"""
+Strings are defined either with a single quote or a double quotes.
+"""
+
+mystring = 'hello'
+print(mystring)
+mystring = "hello"
+print(mystring)
+
+>>>
+hello
+hello
+>>>
+```
+
+Num & Str
+
+```python
+"""
+Simple operators can be executed on numbers and strings
+"""
+
+one = 1
+two = 2
+three = one + two
+print(three)
+
+hello = "hello"
+world = "world"
+helloworld = hello + " " + world
+print(helloworld)
+
+>>>
+3
+hello world
+>>>
+```
+
+Assignment
+
+```python
+"""
+Assignments can be done on more than one variable "simultaneously" on the same line like this
+"""
+
+a, b = 3, 4
+print(a,b)
+
+>>>
+3 4
+>>>
+```
+
+ERR
+
+```python
+"""
+Mixing operators between numbers and strings is not supported
+"""
+
+# This will not work!
+one = 1
+two = 2
+hello = "hello"
+
+print(one + two + hello)
+
+>>>
+Traceback (most recent call last):
+  File "<stdin>", line 6, in <module>
+    print(one + two + hello)
+TypeError: unsupported operand type(s) for +: 'int' and 'str'
+>>>
+```
+
+%s, %d, %f
+
+```python
+"""
+The target of this exercise is to create a string, an integer, and a floating point number. 
+The string should be named mystring and should contain the word "hello". The floating point number should be named 
+myfloat and should contain the number 10.0, and the integer should be named myint and should contain the number 20.
+"""
+
+mystring = "hello"
+myfloat = 10.0
+myint = 20
+
+if mystring == "hello":
+    print("String: %s" % mystring)
+if isinstance(myfloat, float) and myfloat == 10.0:
+    print("Float: %f" % myfloat)
+if isinstance(myint, int) and myint == 20:
+    print("Integer: %d" % myint)
+
+>>>
+String: hello
+Float: 10.000000
+Integer: 20
 >>>
 ```
 
