--- a/PY/DOC/.EXAMPLES.MD
+++ b/PY/DOC/.EXAMPLES.MD
@@ -1,5 +1,18 @@
 
 Welcome to Python
+This line will be printed.
+x is 1
+Integer
+Float
+Strings
+Num & Str
+Assignment
+ERR
+%s, %d, %f
+
+-------------------------
+
+Welcome to Python
 
 ```python
 print("Welcome to Python!")
