--- a/PY/DOC/.EXAMPLES.MD
+++ b/PY/DOC/.EXAMPLES.MD
@@ -1,18 +1,18 @@
 
-Welcome to Python
-This line will be printed.
-x is 1
-Integer
-Float
-Strings
-Num & Str
-Assignment
-ERR
-%s, %d, %f
+[Welcome to Python][1]
+[This line will be printed.][2]
+[x is 1][3]
+[Integer][4]
+[Float][5]
+[Strings][6]
+[Num & Str][7]
+[Assignment][8]
+[ERR][9]
+[%s, %d, %f][10]
 
 -------------------------
 
-Welcome to Python
+[1]: Welcome to Python
 
 ```python
 print("Welcome to Python!")
@@ -22,7 +22,7 @@ Welcome to Python!
 >>>
 ```
 
-This line will be printed.
+[2]: This line will be printed.
 
 ```python
 print("This line will be printed.")
@@ -32,7 +32,7 @@ This line will be printed.
 >>>
 ```
 
-x is 1
+[3]: x is 1
 
 ```python
 x = 1
@@ -45,7 +45,7 @@ x is 1.
 >>>
 ```
 
-Integer
+[4]: Integer
 
 ```python
 """
@@ -60,7 +60,7 @@ print(myint)
 >>>
 ```
 
-Float
+[5]: Float
 
 ```python
 """
