--- a/PY/DOC/.EXAMPLES.MD
+++ b/PY/DOC/.EXAMPLES.MD
@@ -1,18 +1,5 @@
 
-[Welcome to Python][1]
-[This line will be printed][2]
-[x is 1][3]
-[Integer][4]
-[Float][5]
-[Strings][6]
-[Num & Str][7]
-[Assignment][8]
-[ERR][9]
-[%s, %d, %f][10]
-
--------------------------
-
-[1]: Welcome to Python
+Welcome to Python
 
 ```python
 print("Welcome to Python!")
@@ -22,7 +9,7 @@ Welcome to Python!
 >>>
 ```
 
-[2]: This line will be printed.
+This line will be printed.
 
 ```python
 print("This line will be printed.")
@@ -32,7 +19,7 @@ This line will be printed.
 >>>
 ```
 
-[3]: x is 1
+x is 1
 
 ```python
 x = 1
@@ -45,7 +32,7 @@ x is 1.
 >>>
 ```
 
-[4]: Integer
+Integer
 
 ```python
 """
@@ -60,7 +47,7 @@ print(myint)
 >>>
 ```
 
-[5]: Float
+Float
 
 ```python
 """
