--- a/PY/DOC/.EXAMPLES.MD
+++ b/PY/DOC/.EXAMPLES.MD
@@ -5,7 +5,7 @@
 print("Welcome to Python!")
 ```
 ```
-Welcome to Python!
+**Welcome to Python!**
 ```
 
 --------------------------------------------
@@ -20,7 +20,7 @@ print(myint)
 ```
 
 ```
-7
+**7**
 ```
 
 --------------------------------------------
