--- a/PY/DOC/.EXAMPLES.MD
+++ b/PY/DOC/.EXAMPLES.MD
@@ -5,7 +5,7 @@
 print("Welcome to Python!")
 ```
 ```
-**Welcome to Python!**
+Welcome to Python!
 ```
 
 --------------------------------------------
@@ -20,7 +20,7 @@ print(myint)
 ```
 
 ```
-**7**
+7
 ```
 
 --------------------------------------------
@@ -34,8 +34,9 @@ myfloat = 7.0
 print(myfloat)
 myfloat = float(7)
 print(myfloat)
+```
 
->>>
+```
 7.0
 7.0
 >>>
@@ -52,8 +53,9 @@ mystring = 'hello'
 print(mystring)
 mystring = "hello"
 print(mystring)
+```
 
->>>
+```
 hello
 hello
 >>>
@@ -75,8 +77,9 @@ hello = "hello"
 world = "world"
 helloworld = hello + " " + world
 print(helloworld)
+```
 
->>>
+```
 3
 hello world
 >>>
@@ -91,8 +94,9 @@ Assignments can be done on more than one variable "simultaneously" on the same l
 
 a, b = 3, 4
 print(a,b)
+```
 
->>>
+```
 3 4
 >>>
 ```
@@ -104,8 +108,9 @@ x = 1
 if x == 1:
     # indented four spaces
     print("x is 1.")
+```
     
->>>
+```
 x is 1.
 >>>
 ```
@@ -123,8 +128,9 @@ two = 2
 hello = "hello"
 
 print(one + two + hello)
+```
 
->>>
+```
 Traceback (most recent call last):
   File "<stdin>", line 6, in <module>
     print(one + two + hello)
@@ -151,8 +157,9 @@ if isinstance(myfloat, float) and myfloat == 10.0:
     print("Float: %f" % myfloat)
 if isinstance(myint, int) and myint == 20:
     print("Integer: %d" % myint)
+```
 
->>>
+```
 String: hello
 Float: 10.000000
 Integer: 20
