--- a/PY/DOC/.PY_EXAMPLES.MD
+++ b/PY/DOC/.PY_EXAMPLES.MD
@@ -1,4 +1,6 @@
 
+<h5 id="c1">test</h5>
+
 --------------------------------------------
 
 ```python
@@ -60,6 +62,8 @@ hello
 ```
 
 --------------------------------------------
+
+<a href="#c1">test/a>
 
 ```
 Simple operators can be executed on numbers and strings
