--- a/PY/DOC/.PY_EXAMPLES.MD
+++ b/PY/DOC/.PY_EXAMPLES.MD
@@ -63,7 +63,7 @@ hello
 
 --------------------------------------------
 
-<a href="#c1">test/a>
+<a href="#c1">test</a>
 
 ```
 Simple operators can be executed on numbers and strings
