--- a/PY/DOC/.PY_EXAMPLES.MD
+++ b/PY/DOC/.PY_EXAMPLES.MD
@@ -1,7 +1,16 @@
 
-<a href="#c1">test</a>
+--------------------------------------------
+
+<a href="#c1">Welcome to Python!</a>
+<a href="#c2">Integer</a>
+<a href="#c3">Float</a>
+<a href="#c4">String</a>
 
 --------------------------------------------
+
+--------------------------------------------
+
+<h4 id="c1">Welcome to Python!</h4>
 
 ```python
 print("Welcome to Python!")
@@ -11,6 +20,8 @@ Welcome to Python!
 ```
 
 --------------------------------------------
+
+<h4 id="c2">Integer</h4>
 
 ```
 To define an integer, use the following syntax
@@ -26,6 +37,8 @@ print(myint)
 ```
 
 --------------------------------------------
+
+<h4 id="c3">Float</h4>
 
 ```
 To define a floating point number, you may use one of the following notations
@@ -45,6 +58,8 @@ print(myfloat)
 
 --------------------------------------------
 
+<h4 id="c4">String</h4>
+
 ```
 Strings are defined either with a single quote or a double quotes.
 ```
@@ -62,8 +77,6 @@ hello
 ```
 
 --------------------------------------------
-
-<h5 id="c1">test</h5>
 
 ```
 Simple operators can be executed on numbers and strings
