--- a/PY/DOC/.PY_EXAMPLES.MD
+++ b/PY/DOC/.PY_EXAMPLES.MD
@@ -1,10 +1,10 @@
 
 --------------------------------------------
 
-<h4><a href="#c1">Welcome to Python!</a></h4>
-<h4><a href="#c2">Integer</a></h4>
-<h4><a href="#c3">Float</a></h4>
-<h4><a href="#c4">String</a></h4>
+<a href="#c1">Welcome to Python!</a><br>
+<a href="#c2">Integer</a><br>
+<a href="#c3">Float</a><br>
+<a href="#c4">String</a><br>
 
 --------------------------------------------
 
