--- a/PY/DOC/.PY_EXAMPLES.MD
+++ b/PY/DOC/.PY_EXAMPLES.MD
@@ -1,5 +1,7 @@
 
 --------------------------------------------
+<h3 id="c01">PYTHON EXAMPLES</h3>
+
 
 <a href="#c1">Welcome to Python!</a><br>
 <a href="#c2">Integer</a><br>
@@ -18,6 +20,7 @@ print("Welcome to Python!")
 ```
 Welcome to Python!
 ```
+<a href="#c01">↑</a>
 
 --------------------------------------------
 
@@ -35,6 +38,7 @@ print(myint)
 ```
 7
 ```
+<a href="#c01">↑</a>
 
 --------------------------------------------
 
@@ -55,6 +59,7 @@ print(myfloat)
 7.0
 7.0
 ```
+<a href="#c01">↑</a>
 
 --------------------------------------------
 
@@ -75,6 +80,7 @@ print(mystring)
 hello
 hello
 ```
+<a href="#c01">↑</a>
 
 --------------------------------------------
 
@@ -98,6 +104,7 @@ print(helloworld)
 3
 hello world
 ```
+<a href="#c01">↑</a>
 
 --------------------------------------------
 
@@ -113,6 +120,7 @@ print(a,b)
 ```
 3 4
 ```
+<a href="#c01">↑</a>
 
 --------------------------------------------
 
@@ -126,6 +134,7 @@ if x == 1:
 ```
 x is 1.
 ```
+<a href="#c01">↑</a>
 
 --------------------------------------------
 
@@ -147,6 +156,7 @@ Traceback (most recent call last):
     print(one + two + hello)
 TypeError: unsupported operand type(s) for +: 'int' and 'str'
 ```
+<a href="#c01">↑</a>
 
 --------------------------------------------
 
@@ -174,5 +184,6 @@ String: hello
 Float: 10.000000
 Integer: 20
 ```
+<a href="#c01">↑</a>
 --------------------------------------------
 
