--- a/PY/DOC/.PY_EXAMPLES.MD
+++ b/PY/DOC/.PY_EXAMPLES.MD
@@ -3,7 +3,7 @@
 <h3 id="c01">PYTHON EXAMPLES</h3>
 
 
-<a href="#c1">Welcome to Python!</a><br>
+<a href="#c1">Syntax</a><br>
 <a href="#c2">Integer</a><br>
 <a href="#c3">Float</a><br>
 <a href="#c4">String</a><br>
@@ -12,7 +12,7 @@
 
 --------------------------------------------
 
-<h4 id="c1">Welcome to Python!</h4>
+<h4 id="c1">Syntax</h4>
 
 ```python
 print("Welcome to Python!")
@@ -23,8 +23,6 @@ Welcome to Python!
 <a href="#c01">↑</a>
 
 --------------------------------------------
-
-<h4 id="c2">Integer</h4>
 
 ```
 To define an integer, use the following syntax
@@ -42,7 +40,31 @@ print(myint)
 
 --------------------------------------------
 
-<h4 id="c3">Float</h4>
+```
+Set the variable my_variable equal to the value 10.
+Click the Run button to run your code.
+```
+
+python```
+my_variable = 10
+spam = 5
+age = 33
+curry = 30
+
+print(my_variable)
+print(spam)
+print(age)
+print(curry)
+```
+
+```
+10
+5
+33
+30
+```
+
+--------------------------------------------
 
 ```
 To define a floating point number, you may use one of the following notations
@@ -62,8 +84,6 @@ print(myfloat)
 <a href="#c01">↑</a>
 
 --------------------------------------------
-
-<h4 id="c4">String</h4>
 
 ```
 Strings are defined either with a single quote or a double quotes.
