--- a/PY/DOC/.PY_EXAMPLES.MD
+++ b/PY/DOC/.PY_EXAMPLES.MD
@@ -45,7 +45,7 @@ Set the variable my_variable equal to the value 10.
 Click the Run button to run your code.
 ```
 
-python```
+```python
 my_variable = 10
 spam = 5
 age = 33
