--- a/JAVA/DOC/BJM/TOMI/01/EX/01/01.MD
+++ b/JAVA/DOC/BJM/TOMI/01/EX/01/01.MD
@@ -4,3 +4,9 @@
 ### 01
 
 ---
+
+Szabja testre az Eclipse nézetét: Csak a "Console" és az "Outline" ablakokat tartsa meg valamint adja hozzá a "Search View"-t
+
+---
+
+
