--- a/JAVA/DOC/BJM/TOMI/01/EX/05/05.MD
+++ b/JAVA/DOC/BJM/TOMI/01/EX/05/05.MD
@@ -12,3 +12,19 @@
 Minek a rövidítése a JRE és mit jelent? Mi az a JVM?
 
 ---
+
+JRE
+
+The Java Runtime Environment (JRE) is a set of software tools for development of Java applications. It combines the Java Virtual Machine (JVM), platform core classes and supporting libraries.
+
+JRE is part of the Java Development Kit (JDK), but can be downloaded separately. JRE was originally developed by Sun Microsystems Inc., a wholly-owned subsidiary of Oracle Corporation. 
+
+Also known as Java runtime.
+
+---
+
+JVM
+
+A Java virtual machine (JVM) is an abstract computing machine that enables a computer to run Java programs as well as programs written in other languages and compiled to Java bytecode. There are three notions of the JVM: specification, implementation, and instance. 
+
+---
