--- a/JAVA/DOC/BJM/TOMI/01/EX/06/06.MD
+++ b/JAVA/DOC/BJM/TOMI/01/EX/06/06.MD
@@ -12,3 +12,9 @@
 Melyik JRE Package-ben van benne a System println függvénye?
 
 ---
+
+---
+
+* [src](https://docs.oracle.com/javase/7/docs/api/java/lang/System.html)
+
+---
