--- a/JAVA/DOC/BJM/TOMI/01/EX/03/03.MD
+++ b/JAVA/DOC/BJM/TOMI/01/EX/03/03.MD
@@ -12,3 +12,21 @@
 Jelenítse meg hexadecimálisan a 255-t egy beépített függvény segítségével
 
 ---
+
+```java
+package pogrammingPackage;
+
+public class Programming {
+
+	public static void main(String[] args) {
+		String hexa = Integer.toHexString(255);
+		System.out.println(hexa);
+		
+	}
+
+}
+
+>>>
+ff
+>>>
+```
