--- a/JAVA/DOC/BJM/TOMI/01/EX/07/07.MD
+++ b/JAVA/DOC/BJM/TOMI/01/EX/07/07.MD
@@ -12,3 +12,22 @@
 Írjon az "err" console-ra ha a hexadecimálisan megjelnített 255 nem egyenlő 0xDE-vel
 
 ---
+
+```java
+package pogrammingPackage;
+public class Programming {
+	public static void main(String[] args) {
+		String hexa = Integer.toHexString(255);
+		if (hexa != "0xDE")
+		  System.out.println("err");
+		else
+		  System.out.println("gut, gut");
+		
+	}
+
+}
+
+>>>
+err
+>>>
+```
