--- a/JAVA/DOC/BJM/TOMI/01/EX/03/03.MD
+++ b/JAVA/DOC/BJM/TOMI/01/EX/03/03.MD
@@ -15,11 +15,12 @@ Jelenítse meg hexadecimálisan a 255-t egy beépített függvény segítségév
 
 ```java
 package pogrammingPackage;
-
 public class Programming {
-
 	public static void main(String[] args) {
-		String hexa = Integer.toHexString(255);
+		String hexa;
+		int num = 255;
+		
+		hexa = Integer.toHexString(num);
 		System.out.println(hexa);
 		
 	}
