--- a/JAVA/DOC/BJM/TOMI/01/EX/04/04.MD
+++ b/JAVA/DOC/BJM/TOMI/01/EX/04/04.MD
@@ -23,6 +23,44 @@ Adjon meg logikai relációt számok között és írassa ki annak eredményét:
 
 ---
 
+package pogrammingPackage;
+public class Programming {
+	public static void main(String[] args) {
+		  boolean res1 = (5 > 3);
+		  boolean res2 = (3 > 3);
+		  boolean res3 = (3 >= 3);
+		  boolean res4 = (1 < 2);
+		  boolean res5 = (8 <= 4);
+		  boolean res6 = (0 != 15);
+		  boolean res7 = (5 == 7);
+		  boolean res8 = (9 == 9);
+		  
+		  System.out.println("1st reslt (5 > 3) = "+res1);
+		  System.out.println("2nd reslt (3 > 3) = "+res2);
+		  System.out.println("3rd reslt (3 >= 3) = "+res3);
+		  System.out.println("4th reslt (1 < 2) = "+res4);
+		  System.out.println("5th reslt (8 <= 4) = "+res5);
+		  System.out.println("6th reslt (0 != 15) = "+res6);
+		  System.out.println("7th reslt (5 == 7) = "+res7);
+		  System.out.println("8th reslt (9 == 9) = "+res8);
+		
+	}
+
+}
+
+>>>
+1st reslt (5 > 3) = true
+2nd reslt (3 > 3) = false
+3rd reslt (3 >= 3) = true
+4th reslt (1 < 2) = true
+5th reslt (8 <= 4) = false
+6th reslt (0 != 15) = true
+7th reslt (5 == 7) = false
+8th reslt (9 == 9) = true
+>>>
+
+---
+
 [<<< 03](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/01/EX/03/03.MD) ||
 [05 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/01/EX/05/05.MD)
 
