--- a/JAVA/DOC/BJM/TOMI/01/EX/04/04.MD
+++ b/JAVA/DOC/BJM/TOMI/01/EX/04/04.MD
@@ -23,6 +23,7 @@ Adjon meg logikai relációt számok között és írassa ki annak eredményét:
 
 ---
 
+```java
 package pogrammingPackage;
 public class Programming {
 	public static void main(String[] args) {
@@ -58,6 +59,7 @@ public class Programming {
 7th reslt (5 == 7) = false
 8th reslt (9 == 9) = true
 >>>
+```
 
 ---
 
