--- a/JAVA/DOC/BJM/TOMI/01/EX/06/06.MD
+++ b/JAVA/DOC/BJM/TOMI/01/EX/06/06.MD
@@ -13,6 +13,21 @@ Melyik JRE Package-ben van benne a System println függvénye?
 
 ---
 
+```
+public static final PrintStream out
+The "standard" output stream. This stream is already open and ready to accept output data. Typically this stream corresponds to display output or another output destination specified by the host environment or user.
+For simple stand-alone Java applications, a typical way to write a line of output data is:
+
+     System.out.println(data)
+ 
+See the println methods in class PrintStream.
+
+See Also:
+PrintStream.println(), PrintStream.println(boolean), PrintStream.println(char), PrintStream.println(char[]), PrintStream.println(double), PrintStream.println(float), PrintStream.println(int), PrintStream.println(long), PrintStream.println(java.lang.Object), PrintStream.println(java.lang.String)
+```
+
+---
+
 * [src](https://docs.oracle.com/javase/7/docs/api/java/lang/System.html)
 
 ---
