--- a/JAVA/DOC/BJM/TOMI/01/EX/01/01.MD
+++ b/JAVA/DOC/BJM/TOMI/01/EX/01/01.MD
@@ -13,6 +13,8 @@ Szabja testre az Eclipse nézetét: Csak a "Console" és az "Outline" ablakokat 
 
 ---
 
+use the ```minimize``` button
+
 ```
 window --> show view
 ```
