--- a/JAVA/DOC/BJM/TOMI/01/EX/09/09.MD
+++ b/JAVA/DOC/BJM/TOMI/01/EX/09/09.MD
@@ -12,3 +12,20 @@
 Definiáljunk egy szöveges változót ami a következőt tárolja: ```"Value of the "pi" approximately: [valueOfPI]"``` a main függvényben
 
 ---
+
+```java
+package pogrammingPackage;
+public class Programming {
+	public static void main(String[] args) {
+		String val = "Value of the \"pi\" approximately: [valueOfPI]";	
+				
+		System.out.println(val);
+		
+	}
+
+}
+
+>>>
+Value of the "pi" approximately: [valueOfPI]
+>>>
+```
