--- a/JAVA/DOC/BJM/TOMI/01/EX/08/08.MD
+++ b/JAVA/DOC/BJM/TOMI/01/EX/08/08.MD
@@ -13,6 +13,23 @@ Definiáljuk a pi-t egy változóba a main függvényben
 
 ---
 
+```java
+package pogrammingPackage;
+public class Programming {
+	public static void main(String[] args) {
+		Double pi = 3.14;	
+				
+		System.out.println(pi);
+		
+	}
+
+}
+
+>>>
+3.14
+>>>
+```
+
 ---
 
 [<<< 07](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/01/EX/07/07.MD) ||
