--- a/JAVA/DOC/BJM/TOMI/01/EX/08/08.MD
+++ b/JAVA/DOC/BJM/TOMI/01/EX/08/08.MD
@@ -17,7 +17,7 @@ Definiáljuk a pi-t egy változóba a main függvényben
 package pogrammingPackage;
 public class Programming {
 	public static void main(String[] args) {
-		Double pi = 3.14;	
+		double pi = 3.14;	
 				
 		System.out.println(pi);
 		
