--- a/JAVA/DOC/BJM/TOMI/01/EX/10/10.MD
+++ b/JAVA/DOC/BJM/TOMI/01/EX/10/10.MD
@@ -12,3 +12,34 @@
 Hozzuk létre a számokat 1-től 5-ig, tároljuk le azokat változókba, majd hozzunk létre egy 6. változó az előző számok összegének tárolására
 
 ---
+
+```java
+package pogrammingPackage;
+public class Programming {
+	public static void main(String[] args) {
+		int one = 1;
+		int two = 2;
+		int three = 3;
+		int four = 4;
+		int five = 5;
+		int six;
+		
+		six = (one+two+three+four+five);
+				
+		System.out.println(six);
+		
+	}
+
+}
+
+>>>
+15
+>>>
+```
+
+---
+
+[<<< 9](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/01/EX/10/10.MD) ||
+[11 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/01/EX/10/10.MD)
+
+---
