--- a/JAVA/DOC/BJM/TOMI/01/EX/12/12.MD
+++ b/JAVA/DOC/BJM/TOMI/01/EX/12/12.MD
@@ -13,6 +13,23 @@ Inicializáljunk egy változót úgy, hogy egy függvény visszatérési érték
 
 ---
 
+```java
+package pogrammingPackage;
+public class Programming {
+	public static void main(String []args){
+        int y;
+        y = 5*5;
+        
+        int x = y;
+        System.out.print(x);
+     }
+}
+
+>>>
+25
+>>>
+```
+
 ---
 
 [<<< 11](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/01/EX/11/11.MD) ||
