--- a/JAVA/DOC/BJM/TOMI/01/EX/13/13.MD
+++ b/JAVA/DOC/BJM/TOMI/01/EX/13/13.MD
@@ -13,6 +13,24 @@ Hozzunk létre egy int változót keződérték nélkül. Növeljük meg az ért
 
 ---
 
+```java
+package pogrammingPackage;
+public class Programming {
+	public static void main(String []args){
+        int y;
+        y = y + 3;        
+        System.out.print(y);
+     }
+}
+
+>>>
+Exception in thread "main" java.lang.Error: Unresolved compilation problem: 
+	The local variable y may not have been initialized
+
+	at pogrammingPackage.Programming.main(Programming.java:5)
+>>>
+```
+
 ---
 
 [<<< 12](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/01/EX/12/12.MD) ||
