--- a/JAVA/DOC/BJM/TOMI/01/EX/14/14.MD
+++ b/JAVA/DOC/BJM/TOMI/01/EX/14/14.MD
@@ -13,6 +13,19 @@ Hozzunk létre egy függvényt ami visszaadja a pi értékét
 
 ---
 
+```java
+package pogrammingPackage;
+public class Programming {
+	public static void main(String []args){
+        System.out.print(Math.PI);
+     }
+}
+
+>>>
+3.141592653589793
+>>>
+```
+
 ---
 
 [<<< 13](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/01/EX/13/13.MD) ||
