--- a/JAVA/DOC/BJM/TOMI/01/EX/15/15.MD
+++ b/JAVA/DOC/BJM/TOMI/01/EX/15/15.MD
@@ -13,6 +13,20 @@ Hozzunk létre egy függvényt ami kiírja dátum formátumba a paraméterként 
 
 ---
 
+```java
+package pogrammingPackage;
+import java.util.Date;
+public class Programming {
+	   public static void main(String args[]) {
+		      Date date = new Date();
+		      System.out.println(date.toString());
+		}
+}
+
+>>>
+Sat Apr 28 22:08:43 CEST 2018
+>>>
+
 ---
 
 [<<< 14](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/01/EX/14/14.MD) ||
