--- a/JAVA/DOC/BJM/TOMI/01/EX/16/16.MD
+++ b/JAVA/DOC/BJM/TOMI/01/EX/16/16.MD
@@ -13,6 +13,33 @@ Hozzunk létre 3 függvényt, paraméter és visszatérési érték nélkül. Mi
 
 ---
 
+```python
+def f1():
+    print('f1 start')
+    print('f1 finish')
+    
+def f2():
+    print('f2 start')
+    print('f2 finish')
+    
+def f3():
+    print('f3 start')
+    print('f3 finish')
+    
+f1()
+f2()
+f3()
+
+>>>
+f1 start
+f1 finish
+f2 start
+f2 finish
+f3 start
+f3 finish
+>>>
+```
+
 ---
 
 [<<< 15](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/01/EX/15/15.MD) ||
