--- a/JAVA/DOC/BJM/TOMI/01/EX/16/16.MD
+++ b/JAVA/DOC/BJM/TOMI/01/EX/16/16.MD
@@ -13,6 +13,8 @@ Hozzunk létre 3 függvényt, paraméter és visszatérési érték nélkül. Mi
 
 ---
 
+ver 1
+
 ```python
 def f1():
     print('f1 start')
@@ -39,6 +41,33 @@ f3 start
 f3 finish
 >>>
 ```
+
+ver 2
+
+```python
+ps = 'start'
+pf = 'finish'
+
+def r():
+  print(ps)
+  print(pf)
+  
+def a():
+  print(r())
+  
+def b():
+  print(a())
+  
+def c():
+  print(b())
+  
+c()
+
+>>>
+start
+finish
+>>>
+
 
 ---
 
