--- a/JAVA/DOC/BJM/TOMI/01/EX/16/16.MD
+++ b/JAVA/DOC/BJM/TOMI/01/EX/16/16.MD
@@ -45,23 +45,20 @@ f3 finish
 ver 2
 
 ```python
-ps = 'start'
-pf = 'finish'
-
-def r():
-  print(ps)
-  print(pf)
+pdef run():
+  print('start')
+  print('finish')
   
-def a():
-  r()
+def r1():
+  run()
   
-def b():
-  a()
+def r2():
+  r1()
   
-def c():
-  b()
+def r3():
+  r2()
   
-c()
+r3()
 
 >>>
 start
