--- a/JAVA/DOC/BJM/TOMI/01/EX/07/07.MD
+++ b/JAVA/DOC/BJM/TOMI/01/EX/07/07.MD
@@ -18,7 +18,7 @@ package pogrammingPackage;
 public class Programming {
 	public static void main(String[] args) {
 		String hexa = Integer.toHexString(255);
-		if (hexa != "0xDE")
+		if (hexa.equals("0xDE"))
 		  System.out.println("err");
 		else
 		  System.out.println("gut, gut");
@@ -28,7 +28,7 @@ public class Programming {
 }
 
 >>>
-err
+gut, gut
 >>>
 ```
 
