--- a/JAVA/DOC/UDEMY/JVMASTERCL/SEC4/L16.MD
+++ b/JAVA/DOC/UDEMY/JVMASTERCL/SEC4/L16.MD
@@ -5,4 +5,54 @@
 
 ---
 
+```java
+public class HelloWorld{
+
+     public static void main(String []args){
+         
+        System.out.println("Hello trk");
+        
+        int FirstNumber = 5;
+        System.out.println(FirstNumber);
+        
+        int SecondNumber = (10 + 5) + (2*10);
+        System.out.println(SecondNumber);
+        System.out.println("SecondNumber");
+        
+     }
+}
+
+>>>
+Hello trk
+5
+35
+SecondNumber
+>>>
+```
+
+---
+
+```java
+public class HelloWorld{
+
+     public static void main(String []args){
+         
+        int FirstNumber = 5;
+        int SecondNumber = 18;
+        int ThirdNumber = FirstNumber * 2;
+        
+        int MyTotal = FirstNumber + SecondNumber + ThirdNumber;
+        
+        int MyLast = 1000 - MyTotal;
+        
+        System.out.println(MyLast);
+        
+     }
+}
+
+>>>
+967
+>>>
+```
+
 ---
