--- a/JAVA/DOC/UDEMY/JVMASTERCL/SEC4/L16.MD
+++ b/JAVA/DOC/UDEMY/JVMASTERCL/SEC4/L16.MD
@@ -36,6 +36,8 @@ SecondNumber
 >>>
 ```
 
+[test it](https://www.tutorialspoint.com/compile_java_online.php)
+
 ---
 
 ```java
@@ -61,8 +63,7 @@ public class HelloWorld{
 >>>
 ```
 
----
-
-[Online env](https://www.tutorialspoint.com/compile_java_online.php)
+[test it](https://www.tutorialspoint.com/compile_java_online.php)
 
 ---
+
