--- a/JAVA/DOC/UDEMY/JVMASTERCL/SEC4/L16.MD
+++ b/JAVA/DOC/UDEMY/JVMASTERCL/SEC4/L16.MD
@@ -36,7 +36,7 @@ SecondNumber
 >>>
 ```
 
-[test it](https://www.tutorialspoint.com/compile_java_online.php)
+[test](https://www.tutorialspoint.com/compile_java_online.php)
 
 ---
 
@@ -63,7 +63,7 @@ public class HelloWorld{
 >>>
 ```
 
-[test it](https://www.tutorialspoint.com/compile_java_online.php)
+[test](https://www.tutorialspoint.com/compile_java_online.php)
 
 ---
 
