--- a/PY/DOC/PYMASCL/05/05.MD
+++ b/PY/DOC/PYMASCL/05/05.MD
@@ -7,6 +7,13 @@
 
 ---
 
-### 05
+### 05 - The Basics of Python
+
+* [22](Intro)
+* [23](Getting to know Python)
+* [24](Understanding more about Python)
+* [25](Storing items in Variables)
+* [26](More about variables and strings)
+* [27](String Formatting)
 
 ---
