--- a/PY/DOC/PYMASCL/05/05.MD
+++ b/PY/DOC/PYMASCL/05/05.MD
@@ -9,7 +9,7 @@
 
 ### 05 - The Basics of Python
 
-* [22 - Intro]()
+* [22 - Intro](https://github.com/ttltrk/PRG/blob/master/PY/DOC/PYMASCL/05/22/22.MD)
 * [23 - Getting to know Python]()
 * [24 - Understanding more about Python]()
 * [25 - Storing items in Variables]()
