--- a/PY/DOC/PYMASCL/05/05.MD
+++ b/PY/DOC/PYMASCL/05/05.MD
@@ -10,10 +10,10 @@
 ### 05 - The Basics of Python
 
 * [22 - Intro](https://github.com/ttltrk/PRG/blob/master/PY/DOC/PYMASCL/05/22/22.MD)
-* [23 - Getting to know Python]()
-* [24 - Understanding more about Python]()
-* [25 - Storing items in Variables]()
-* [26 - More about variables and strings]()
-* [27 - String Formatting]()
+* [23 - Getting to know Python](https://github.com/ttltrk/PRG/blob/master/PY/DOC/PYMASCL/05/23/23.MD)
+* [24 - Understanding more about Python](https://github.com/ttltrk/PRG/blob/master/PY/DOC/PYMASCL/05/24/24.MD)
+* [25 - Storing items in Variables](https://github.com/ttltrk/PRG/blob/master/PY/DOC/PYMASCL/05/25/25.MD)
+* [26 - More about variables and strings](https://github.com/ttltrk/PRG/blob/master/PY/DOC/PYMASCL/05/26/26.MD)
+* [27 - String Formatting](https://github.com/ttltrk/PRG/blob/master/PY/DOC/PYMASCL/05/27/27.MD)
 
 ---
