--- a/PY/DOC/PYMASCL/05/23/23.MD
+++ b/PY/DOC/PYMASCL/05/23/23.MD
@@ -11,3 +11,39 @@
 ### 23 - Getting to know Python
 
 ---
+
+```python
+print('hello world')
+print(1+2)
+print(2*3)
+print()
+print("the end")
+print("Python's strings")
+print('include some "quotes" now')
+
+>>>
+hello world
+3
+6
+
+the end
+Python's strings
+include some "quotes" now
+>>>
+```
+
+---
+
+```python
+greeting = "hello"
+name = "trk"
+print(greeting + name)
+print(greeting + ' ' + name)
+
+>>>
+hellotrk
+hello trk
+>>>
+```
+
+---
