--- a/PY/DOC/PYMASCL/05/24/24.MD
+++ b/PY/DOC/PYMASCL/05/24/24.MD
@@ -13,7 +13,15 @@
 ---
 
 ```python
+greeting = "hi"
+name = input("pls enter your name \n")
+print(greeting + ' ' + name)
 
+>>>
+pls enter your name 
+ trk
+hi trk
+>>>
 ```
 
 ---
