--- a/JAVA/DOC/UDEMY/JVMASTERCL/SEC4/04.MD
+++ b/JAVA/DOC/UDEMY/JVMASTERCL/SEC4/04.MD
@@ -11,14 +11,14 @@
 
 ---
 
-* [15 - ]()
+* [15 - Intro]()
 * [16 - What are variables](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/UDEMY/JVMASTERCL/SEC4/L16.MD)
-* [17 - ]()
-* [18 - ]()
-* [19 - ]()
-* [20 - ]()
-* [21 - ]()
-* [22 - ]()
+* [17 - Getting to know Primitive Data Types - The byte, short, int and long]()
+* [18 - Getting to know Primitive Data Types - The float and double]()
+* [19 - Getting to know Primitive Data Types - The char and boolean]()
+* [20 - Understanding Strings and Finishing Up Primitive Data Types]()
+* [21 - Operators in Java]()
+* [22 - More on Operators and Operator Precedence]()
 
 ---
 
