--- a/PY/DOC/PYMASCL/05/25/25.MD
+++ b/PY/DOC/PYMASCL/05/25/25.MD
@@ -11,3 +11,42 @@
 ### 25 - Storing items in Variables
 
 ---
+
+```python
+greeting = "hello"
+name = "trk"
+
+print(greeting + ' ' + name)
+
+>>>
+hello trk
+>>>
+```
+
+---
+
+```python
+a = 12
+b = 3
+
+print(a+b)
+print(a-b)
+print(a*b)
+print(a/b)
+print(a//b)
+print(a%b)
+
+>>>
+15
+9
+36
+4.0
+4
+0
+>>>
+```
+
+---
+
+
+
