--- a/JAVA/DOC/BJM/TOMI/02/01/01.MD
+++ b/JAVA/DOC/BJM/TOMI/02/01/01.MD
@@ -4,3 +4,39 @@
 ### 01
 
 ---
+
+1. Definiáljunk egy-egy String változót a vezetéknévnek és a keresztnévnek. Fűzzük össze a két változót egy harmadikba.
+
+```java
+package pogrammingPackage;
+public class Programming {
+	public static void main(String []args){
+        
+		String n1 = "ttl ";
+		String n2 = "trk";
+		String n3 = n1+n2;
+		
+		System.out.println(n3);
+         		  
+  }
+
+}
+
+>>>
+ttl trk
+>>>
+```
+
+---
+
+```python
+a = "ttl "
+b = "trk"
+print(a+b)
+
+>>>
+ttl trk
+>>>
+```
+
+---
