--- a/JAVA/DOC/BJM/TOMI/02/02/02.MD
+++ b/JAVA/DOC/BJM/TOMI/02/02/02.MD
@@ -4,3 +4,25 @@
 ### 02
 
 ---
+
+02. Definiáljunk egy egész típust és adjunk neki értékül egy nem egész számot (pl.: 5,5). Mi történik?
+
+---
+
+public class HelloWorld{
+     public static void main(String []args){
+         
+         int i = 5.5;
+         
+        System.out.println(i);
+     }
+}
+
+>>>
+HelloWorld.java:5: error: incompatible types: possible lossy conversion from double to int
+         int i = 5.5;
+                 ^
+1 error
+>>>
+
+---
