--- a/JAVA/DOC/BJM/TOMI/02/02/02.MD
+++ b/JAVA/DOC/BJM/TOMI/02/02/02.MD
@@ -15,6 +15,7 @@
 
 ---
 
+```java
 public class HelloWorld{
      public static void main(String []args){
          
@@ -30,5 +31,6 @@ HelloWorld.java:5: error: incompatible types: possible lossy conversion from dou
                  ^
 1 error
 >>>
+```
 
 ---
