--- a/JAVA/DOC/BJM/TOMI/02/03/03.MD
+++ b/JAVA/DOC/BJM/TOMI/02/03/03.MD
@@ -4,3 +4,40 @@
 ### 03
 
 ---
+
+3. Definiáljunk egy double és egy int típust. A double típus legyen egyenlő az int típusú változó kétszeresével.
+
+---
+
+```java
+public class HelloWorld{
+
+     public static void main(String []args){
+         
+         int i = 5;
+         double d = 2*i;
+         
+        System.out.println(i);
+        System.out.println(d);
+     }
+}
+
+>>>
+5
+10.0
+>>>
+```
+
+---
+
+```python
+a = 5
+b = 2.0
+print(a*b)
+
+>>>
+10.0
+>>>
+```
+
+---
