--- a/JAVA/DOC/BJM/TOMI/02/01/01.MD
+++ b/JAVA/DOC/BJM/TOMI/02/01/01.MD
@@ -15,6 +15,8 @@
 
 ---
 
+Java example
+
 ```java
 package pogrammingPackage;
 public class Programming {
@@ -36,6 +38,8 @@ ttl trk
 ```
 
 ---
+
+Python example
 
 ```python
 a = "ttl "
