--- a/JAVA/DOC/BJM/TOMI/02/03/03.MD
+++ b/JAVA/DOC/BJM/TOMI/02/03/03.MD
@@ -15,6 +15,8 @@
 
 ---
 
+Java example
+
 ```java
 public class HelloWorld{
 
@@ -35,6 +37,8 @@ public class HelloWorld{
 ```
 
 ---
+
+Python example
 
 ```python
 a = 5
