--- a/PY/DOC/PYMASCL/05/26/26.MD
+++ b/PY/DOC/PYMASCL/05/26/26.MD
@@ -11,3 +11,57 @@
 ### 26 - More about variables and strings
 
 ---
+
+```python
+parrot = "Norwegian blue"
+
+print(parrot)
+print(parrot[0])
+print(parrot[3])
+print(parrot[-1])
+
+>>>
+Norwegian blue
+N
+w
+e
+>>>
+```
+
+```python
+parrot = "Norwegian blue"
+
+print(parrot[0:6])
+print(parrot[:6])
+print(parrot[6:])
+print(parrot[-4:-2])
+print(parrot[0:6:2])
+
+>>>
+Norweg
+Norweg
+ian blue
+bl
+Nre
+>>>
+```
+
+```python
+numbers = "1, 2, 3, 4, 5, 6, 7, 8, 9"
+
+print(numbers[0::1])
+print(numbers[0::2])
+print(numbers[0::3])
+print(numbers[0::4])
+print(numbers[1::1])
+print(numbers[2::1])
+
+>>>
+1, 2, 3, 4, 5, 6, 7, 8, 9
+1 ,3 ,5 ,7 ,9
+123456789
+1, 5, 9
+, 2, 3, 4, 5, 6, 7, 8, 9
+ 2, 3, 4, 5, 6, 7, 8, 9
+>>>
+```
