--- a/PY/DOC/PYMASCL/05/27/27.MD
+++ b/PY/DOC/PYMASCL/05/27/27.MD
@@ -11,3 +11,25 @@
 ### 27 - String Formatting
 
 ---
+
+```python
+age = 35
+
+print("my age is " + age + "years")
+
+>>>
+Traceback (most recent call last):
+  File "python", line 3, in <module>
+TypeError: must be str, not int
+>>>
+```
+
+```python
+age = 35
+
+print("my age is " + str(age) + " years")
+
+>>>
+35
+>>>
+```
