--- a/PY/DOC/PYMASCL/05/27/27.MD
+++ b/PY/DOC/PYMASCL/05/27/27.MD
@@ -30,6 +30,18 @@ age = 35
 print("my age is " + str(age) + " years")
 
 >>>
-35
+my age is 35 years
 >>>
 ```
+
+```python
+age = 35
+
+print("my age is {0} years".format(age))
+
+>>>
+my age is 35 years
+>>>
+```
+
+---
