--- a/PY/DOC/PYMASCL/05/27/27.MD
+++ b/PY/DOC/PYMASCL/05/27/27.MD
@@ -44,4 +44,12 @@ my age is 35 years
 >>>
 ```
 
+```python
+print("there are {0} days in {1}, {2}, {3}, {4}, {5}, {6} and in {7}".format(31, "Jan", "Feb", "Mrc", "Apr", "May", "Jun", "Jul"))
+
+>>>
+there are 31 days in Jan, Feb, Mrc, Apr, May, Jun and in Jul
+>>>
+```
+
 ---
