--- a/PY/DOC/PYMASCL/05/27/27.MD
+++ b/PY/DOC/PYMASCL/05/27/27.MD
@@ -52,4 +52,12 @@ there are 31 days in Jan, Feb, Mrc, Apr, May, Jun and in Jul
 >>>
 ```
 
+```python
+print("there are %s days in " %(10))
+
+>>>
+there are 10 days in 
+>>>
+```
+
 ---
