--- a/PY/DOC/PYMASCL/05/27/27.MD
+++ b/PY/DOC/PYMASCL/05/27/27.MD
@@ -60,4 +60,33 @@ there are 10 days in
 >>>
 ```
 
+```python
+print("""Elso {1}, Nulladik {0}, Harmadik {3}, Masodik {2}  """.format(0, 1, 2, 3))
+
+>>>
+Elso 1, Nulladik 0, Harmadik 3, Masodik 2  
+>>>
+```
+
+```python
+age = 35
+
+print("My age is %d years" % age)
+
+>>>
+My age is 35 years
+>>>
+
+```python
+age = 35
+
+print("My age is %d %s, %d %s" % (age, "years", 6, "months"))
+
+>>>
+My age is 35 years, 6 months
+>>>
+```
+
+```
+
 ---
