--- a/PY/DOC/PYMASCL/05/27/27.MD
+++ b/PY/DOC/PYMASCL/05/27/27.MD
@@ -88,6 +88,23 @@ My age is 35 years, 6 months
 >>>
 ```
 
+```python
+for i in range (1, 12):
+  print("No. %2d squared is %4d and cubed is %4d" % (i, i ** 2, i ** 3))
+  
+>>>
+No.  1 squared is    1 and cubed is    1
+No.  2 squared is    4 and cubed is    8
+No.  3 squared is    9 and cubed is   27
+No.  4 squared is   16 and cubed is   64
+No.  5 squared is   25 and cubed is  125
+No.  6 squared is   36 and cubed is  216
+No.  7 squared is   49 and cubed is  343
+No.  8 squared is   64 and cubed is  512
+No.  9 squared is   81 and cubed is  729
+No. 10 squared is  100 and cubed is 1000
+No. 11 squared is  121 and cubed is 1331
+>>>
 ```
 
 ---
