--- a/PY/DOC/PYMASCL/05/24/24.MD
+++ b/PY/DOC/PYMASCL/05/24/24.MD
@@ -12,6 +12,10 @@
 
 ---
 
+[IDE](https://repl.it/@ttltrknet/ExcitingLuminousCryptos)
+
+---
+
 ```python
 greeting = "hi"
 name = input("pls enter your name \n")
