--- a/JAVA/DOC/UDEMY/JVMASTERCL/SEC4/L16.MD
+++ b/JAVA/DOC/UDEMY/JVMASTERCL/SEC4/L16.MD
@@ -11,6 +11,10 @@
 
 ---
 
+[IDE](https://www.tutorialspoint.com/compile_java_online.php)
+
+---
+
 ```java
 public class HelloWorld{
 
@@ -36,8 +40,6 @@ SecondNumber
 >>>
 ```
 
-[test](https://www.tutorialspoint.com/compile_java_online.php)
-
 ---
 
 ```java
@@ -62,8 +64,6 @@ public class HelloWorld{
 967
 >>>
 ```
-
-[test](https://www.tutorialspoint.com/compile_java_online.php)
 
 ---
 
