--- a/JAVA/DOC/BJM/TOMI/02/06/06.MD
+++ b/JAVA/DOC/BJM/TOMI/02/06/06.MD
@@ -4,3 +4,131 @@
 ### 06
 
 ---
+
+Definiáljunk egy kiírató függvényt, aminek nincs visszatérési értéke de egy bemenő String-et vár amit a Println() függvénnyel ki tudunk iratni.
+
+---
+
+Java example
+
+```java
+package pogrammingPackage;
+
+public class Programming {
+public static void main(String []args){
+        
+	    String a = "hello world";
+		
+		func_null(a);
+         
+    }
+	
+    private static void func_null(String a) {
+    	System.out.println(a);
+	  
+  }
+
+}
+
+
+>>>
+hello world
+>>>
+```
+
+```java
+package pogrammingPackage;
+
+public class Programming {
+public static void main(String []args){
+        
+	    String a = "hello world";
+	    String b = "xyz";
+		
+	    System.out.println(a);
+	    func_null(b);
+         
+    }
+	
+    private static void func_null(String param1) {
+    	System.out.println(param1);
+	  
+  }
+
+}
+
+>>>
+hello world
+xyz
+>>>
+```
+
+```java
+package pogrammingPackage;
+
+public class Programming {
+public static void main(String []args){
+        
+	    String a = "hello world";
+	    String b = "xyz";
+		String c = a+b;
+		a = a+b;
+		
+	    System.out.println(a);
+	    func_null(b);
+	    func_null("abc");
+	    func_null(c);
+         
+    }
+	
+    private static void func_null(String param1) {
+    	System.out.println(param1);
+	  
+  }
+
+}
+
+>>>
+hello worldxyz
+xyz
+abc
+hello worldxyz
+>>>
+```
+
+---
+
+Python example
+
+```python
+#variables
+a = "hello world"
+b = "xyz"
+c = 5
+d = 7
+
+#functions
+def pr(par1):
+  print(par1)
+  
+def ps(par1, par2):
+  return (par1+par2)
+
+def ms(par1,par2):
+  return (par1-par2)
+
+#STDOUT
+pr(a)
+pr(b)
+print(ps(c,d))
+print(ms(c,d))
+
+>>>
+hello world
+xyz
+12
+-2
+>>>
+```
+
+---
