--- a/JAVA/DOC/BJM/TOMI/02/06/06.MD
+++ b/JAVA/DOC/BJM/TOMI/02/06/06.MD
@@ -11,7 +11,8 @@
 
 ---
 
-5. Definiáljunk egy kiírató függvényt, aminek nincs visszatérési értéke de egy bemenő String-et vár amit a Println() függvénnyel ki tudunk iratni.
+6. Definiáljunk egy kiírató függvényt, aminek nincs visszatérési értéke de egy bemenő String-et vár amit a Println() függvénnyel ki 
+tudunk iratni.
 
 ---
 
