--- a/JAVA/DOC/BJM/TOMI/02/08/08.MD
+++ b/JAVA/DOC/BJM/TOMI/02/08/08.MD
@@ -4,3 +4,37 @@
 ### 08
 
 ---
+
+8. Definiáljon egy átalakító függvényt, ami int típusból String típust csinál. Hogyan néz ki a függvény definíciója (visszatérési érték 
+- függvény név - paraméterek)?
+
+---
+
+Java example
+
+```java
+package pogrammingPackage;
+public class Programming {
+	public static void main(String []args){
+        
+		String number = "10";
+		int res = Integer.parseInt(number);		
+		
+		System.out.println(func(res));
+		
+	  }
+		
+	  private static int func(int result) {
+		  return result;
+	  
+  }
+
+}
+
+
+>>>
+10
+>>>
+```
+
+---
