--- a/JAVA/DOC/BJM/TOMI/02/08/08.MD
+++ b/JAVA/DOC/BJM/TOMI/02/08/08.MD
@@ -6,7 +6,7 @@
 ---
 
 8. Definiáljon egy átalakító függvényt, ami int típusból String típust csinál. Hogyan néz ki a függvény definíciója (visszatérési érték 
-- függvény név - paraméterek)?
+függvény név - paraméterek)?
 
 ---
 
