--- a/JAVA/DOC/BJM/TOMI/02/09/09.MD
+++ b/JAVA/DOC/BJM/TOMI/02/09/09.MD
@@ -4,3 +4,50 @@
 ### 09
 
 ---
+
+9. Mi a baj a következő függvénnyel?
+
+---
+
+```java
+private static void getLengthOfString(String whatIsLength)
+{
+	int whatIsLength = 0;
+	WhatIsLength = WhatIsLength.length();
+	return whatIsLength;
+}
+```
+
+Javítsa ki!
+
+```java
+package pogrammingPackage;
+public class Programming {
+public static void main(String []args){
+		
+		String a = "a";
+		String b = "bb";
+		String c = "ccc";
+        
+	  System.out.println(getLengthOfString(a));
+	  System.out.println(getLengthOfString(b));
+	  System.out.println(getLengthOfString(c));
+		
+	  }
+		
+	  private static int getLengthOfString(String WhatIsLength)
+	
+	{
+		int whatIsLength = 0;
+		whatIsLength = WhatIsLength.length();
+		return whatIsLength;
+	}
+
+}
+
+>>>
+1
+2
+3
+>>>
+```
