--- a/JAVA/DOC/BJM/TOMI/02/10/10.MD
+++ b/JAVA/DOC/BJM/TOMI/02/10/10.MD
@@ -4,3 +4,50 @@
 ### 10
 
 ---
+
+10. Mi lesz a kimenete a következő függvénynek:
+
+---
+
+```java
+static int whatIsTheRetVal()
+{
+	calculatedIntResult = 2;
+	++calculatedIntResult;
+	return calculatedIntResult++;
+}
+```
+
+```java
+package pogrammingPackage;
+public class Programming {public static void main(String []args){
+		
+        
+		System.out.println(whatIsTheRetVal_1());
+		System.out.println(whatIsTheRetVal_2());
+		
+	  }
+	  
+	static int whatIsTheRetVal_1()
+	{
+		int calculatedIntResult = 2;
+		++calculatedIntResult;
+		return ++calculatedIntResult;
+	}
+		
+	static int whatIsTheRetVal_2()
+	{
+		int calculatedIntResult = 2;
+		++calculatedIntResult;
+		return calculatedIntResult++;
+	}
+	
+}
+
+>>>
+4
+3
+>>>
+```
+
+---
