--- a/JAVA/DOC/BJM/TOMI/02/10/10.MD
+++ b/JAVA/DOC/BJM/TOMI/02/10/10.MD
@@ -15,12 +15,25 @@
 
 ---
 
+01
+
 ```java
 static int whatIsTheRetVal()
 {
 	calculatedIntResult = 2;
 	++calculatedIntResult;
 	return calculatedIntResult++;
+}
+```
+
+02
+
+```java
+static int whatIsTheRetVal()
+{
+	calculatedIntResult = 2;
+	++calculatedIntResult;
+	return ++calculatedIntResult;
 }
 ```
 
