--- a/JAVA/DOC/BJM/TOMI/02/13/13.MD
+++ b/JAVA/DOC/BJM/TOMI/02/13/13.MD
@@ -4,3 +4,16 @@
 ### 13
 
 ---
+
+Java Example
+
+```java
+
+```
+
+---
+
+[<<< 12](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/12/12.MD) ||
+[14 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/14/14.MD)
+
+---
