--- a/JAVA/DOC/BJM/TOMI/02/14/14.MD
+++ b/JAVA/DOC/BJM/TOMI/02/14/14.MD
@@ -4,3 +4,16 @@
 ### 14
 
 ---
+
+Java example
+
+```java
+
+```
+
+---
+
+[<<< 13](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/13/13.MD) ||
+[15 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/15/15.MD)
+
+---
