--- a/JAVA/DOC/BJM/TOMI/02/16/16.MD
+++ b/JAVA/DOC/BJM/TOMI/02/16/16.MD
@@ -4,3 +4,18 @@
 ### 16
 
 ---
+
+---
+
+Java example
+
+```java
+
+```
+
+---
+
+[<<< 15](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/15/15.MD) ||
+[17 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/17/17.MD)
+
+---
