--- a/JAVA/DOC/BJM/TOMI/02/18/18.MD
+++ b/JAVA/DOC/BJM/TOMI/02/18/18.MD
@@ -4,3 +4,18 @@
 ### 18
 
 ---
+
+---
+
+Java example
+
+```java
+
+```
+
+---
+
+[<<< 17](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/17/17.MD) ||
+[19 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/19/19.MD)
+
+---
