--- a/JAVA/DOC/BJM/TOMI/02/19/19.MD
+++ b/JAVA/DOC/BJM/TOMI/02/19/19.MD
@@ -4,3 +4,18 @@
 ### 19
 
 ---
+
+---
+
+Java example
+
+```java
+
+```
+
+---
+
+[<<< 18](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/18/18.MD) ||
+[20 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/20/20.MD)
+
+---
