--- a/JAVA/DOC/BJM/TOMI/02/20/20.MD
+++ b/JAVA/DOC/BJM/TOMI/02/20/20.MD
@@ -4,3 +4,18 @@
 ### 20
 
 ---
+
+---
+
+Java example
+
+```java
+
+```
+
+---
+
+[<<< 19](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/19/19.MD) ||
+[21 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/21/21.MD)
+
+---
