--- a/JAVA/DOC/BJM/TOMI/02/22/22.MD
+++ b/JAVA/DOC/BJM/TOMI/02/22/22.MD
@@ -4,3 +4,18 @@
 ### 22
 
 ---
+
+---
+
+Java example
+
+```java
+
+```
+
+---
+
+[<<< 21](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/21/21.MD) ||
+[23 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/23/23.MD)
+
+---
