--- a/JAVA/DOC/BJM/TOMI/02/23/23.MD
+++ b/JAVA/DOC/BJM/TOMI/02/23/23.MD
@@ -4,3 +4,18 @@
 ### 23
 
 ---
+
+---
+
+Java example
+
+```java
+
+```
+
+---
+
+[<<< 22](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/22/22.MD) ||
+[24 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/24/24.MD)
+
+---
