--- a/JAVA/DOC/BJM/TOMI/02/24/24.MD
+++ b/JAVA/DOC/BJM/TOMI/02/24/24.MD
@@ -4,3 +4,18 @@
 ### 24
 
 ---
+
+---
+
+Java example
+
+```java
+
+```
+
+---
+
+[<<< 23](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/23/23.MD) ||
+[25 >>>](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/25/25.MD)
+
+---
