--- a/JAVA/DOC/BJM/TOMI/02/25/25.MD
+++ b/JAVA/DOC/BJM/TOMI/02/25/25.MD
@@ -4,3 +4,17 @@
 ### 25
 
 ---
+
+---
+
+Java example
+
+```java
+
+```
+
+---
+
+[<<< 24](https://github.com/ttltrk/PRG/blob/master/JAVA/DOC/BJM/TOMI/02/24/24.MD) ||
+
+---
