--- a/JAVA/DOC/BJM/TOMI/02/13/13.MD
+++ b/JAVA/DOC/BJM/TOMI/02/13/13.MD
@@ -11,12 +11,100 @@
 
 ---
 
+13. Definiáljuk az osztás függvényt, ami 0-val való osztás esetén hibaértéket ad vissza
+
 ---
 
-Java Example
+Java example
 
 ```java
+public class HelloWorld{
+	public static void main(String []args){
+        
+		int param1 = 10;
+		int param2 = param1/0;
+		String param3 = "err";
+		
+		System.out.println(func(param1, param2, param3));
+         
+    }
+	
+    private static int func(int param1, int param2, String param3) {
+	  if (param2 == 0)
+	    return param3;
+	  
+        }
 
+}
+
+>>>
+HelloWorld.java:14: error: incompatible types: String cannot be converted to int
+	    return param3;
+	           ^
+1 error
+>>>
+```
+
+```java
+public class HelloWorld{
+	public static void main(String []args){
+        
+		int param1 = 10;
+		
+		System.out.println(func(param1));
+         
+    }
+	
+    private static int func(int param1) {
+	  return param1/0;
+	  
+        }
+
+}
+
+>>>
+Exception in thread "main" java.lang.ArithmeticException: / by zero
+	at HelloWorld.func(HelloWorld.java:11)
+	at HelloWorld.main(HelloWorld.java:6)
+>>>
+```
+
+---
+
+Python example
+
+```python
+p1 = 10
+p2 = 5
+
+def div():
+  if (p1/p2 == 2):
+    print("gut")
+  else:
+    print("err")
+    
+div()
+
+>>>
+gut
+>>>
+```
+
+```python
+p1 = 10
+p2 = 6
+
+def div():
+  if (p1/p2 == 2):
+    print("gut")
+  else:
+    print("err")
+    
+div()
+
+>>>
+err
+>>>
 ```
 
 ---
