--- a/JAVA/DOC/BJM/TOMI/01/EX/01/01.MD
+++ b/JAVA/DOC/BJM/TOMI/01/EX/01/01.MD
@@ -13,6 +13,10 @@ Szabja testre az Eclipse nézetét: Csak a "Console" és az "Outline" ablakokat 
 
 ---
 
+[IDE](https://www.tutorialspoint.com/compile_java_online.php)
+
+---
+
 use the ```minimize``` button
 
 ```
