--- a/JAVA/DOC/BJM/TOMI/01/EX/01/01.MD
+++ b/JAVA/DOC/BJM/TOMI/01/EX/01/01.MD
@@ -13,7 +13,7 @@ Szabja testre az Eclipse nézetét: Csak a "Console" és az "Outline" ablakokat 
 
 ---
 
-[IDE](https://www.tutorialspoint.com/compile_java_online.php target="_blank)
+[IDE]("https://www.tutorialspoint.com/compile_java_online.php" target="_blank)
 
 ---
 
