--- a/JAVA/DOC/BJM/TOMI/01/EX/02/02.MD
+++ b/JAVA/DOC/BJM/TOMI/01/EX/02/02.MD
@@ -13,6 +13,10 @@ Mit lát az Outline View-ban? Hogyan tud fájlon belül keresni?
 
 ---
 
+[IDE](https://www.tutorialspoint.com/compile_java_online.php)
+
+---
+
 ```
 package + class
 
