--- a/JAVA/DOC/BJM/TOMI/01/EX/03/03.MD
+++ b/JAVA/DOC/BJM/TOMI/01/EX/03/03.MD
@@ -21,17 +21,29 @@ Jelenítse meg hexadecimálisan a 255-t egy beépített függvény segítségév
 package pogrammingPackage;
 public class Programming {
 	public static void main(String[] args) {
-		String hexa;
-		int num = 255;
+		String hexa_1;
+		String hexa_2;
+		String hexa_3;
 		
-		hexa = Integer.toHexString(num);
-		System.out.println(hexa);
+		int num_1 = 200;
+		int num_2 = 250;
+		int num_3 = 255;
+		
+		hexa_1 = Integer.toHexString(num_1);
+		hexa_2 = Integer.toHexString(num_2);
+		hexa_3 = Integer.toHexString(num_3);
+		
+		System.out.println(hexa_1);
+		System.out.println(hexa_2);
+		System.out.println(hexa_3);
 		
 	}
 
 }
 
 >>>
+c8
+fa
 ff
 >>>
 ```
