--- a/JAVA/DOC/BJM/TOMI/01/EX/04/04.MD
+++ b/JAVA/DOC/BJM/TOMI/01/EX/04/04.MD
@@ -23,6 +23,10 @@ Adjon meg logikai relációt számok között és írassa ki annak eredményét:
 
 ---
 
+[IDE](https://www.tutorialspoint.com/compile_java_online.php)
+
+---
+
 ```java
 package pogrammingPackage;
 public class Programming {
